Updated to Keycloak 26, typescript complier fixes

--- a/packages/ssr/tsconfig.json
+++ b/packages/ssr/tsconfig.json
@@ -12,6 +12,7 @@
     "jsx": "react",
     "declaration": true,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -22,8 +23,10 @@
     "noUnusedParameters": true,
     "esModuleInterop": true,
     "baseUrl": "./",
+    "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
     "paths": {
-      "@react-keycloak-fork/core": ["../core"]
+      "@react-keycloak-fork/core": ["../core"],
+      "keycloak-js": ["../../node_modules/keycloak-js/lib/keycloak.d.ts"]
     }
   },
   "include": [
