--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -49,7 +49,7 @@
     "prepublishOnly": "npm run build && cp ../../LICENSE.md ."
   },
   "peerDependencies": {
-    "keycloak-js": ">=17.0.0",
+    "keycloak-js": ">=26.0.0",
     "react": ">=16.0",
     "typescript": ">=3.8"
   },
@@ -69,5 +69,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom"
+  },
+  "devDependencies": {
+    "keycloak-js": "^26.2.0"
   }
 }
