--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "prepare": "lerna bootstrap --no-ci",
     "build": "lerna run build",
     "test": "lerna run test",
     "test:coverage": "lerna run test:coverage",
@@ -43,7 +45,7 @@
     "jest": "28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "keycloak-js": "^26.0.0",
-    "lerna": "^4.0.0",
+    "lerna": "^6.6.2",
     "lint-staged": "^12.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
