Update for Keycloak 26, update metadata, deprecate project
Updated documentation and package metadata to reflect support for Keycloak 26. Changed repository, author, bugs, and homepage fields to michael-connolly236. Added deprecation and migration notice recommending NextAuth.js, and removed funding information and legacy references.

--- a/package.json
+++ b/package.json
@@ -71,5 +71,14 @@
     "@react-keycloak-fork/core": "file:packages/core",
     "@react-keycloak-fork/ssr": "file:packages/ssr",
     "@react-keycloak-fork/web": "file:packages/web"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/michael-connolly236/react-keycloak-fork.git"
+  },
+  "author": "michael-connolly236",
+  "bugs": {
+    "url": "https://github.com/michael-connolly236/react-keycloak-fork/issues"
+  },
+  "homepage": "https://github.com/michael-connolly236/react-keycloak-fork#readme"
 }
