--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,13 +5,13 @@
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=17. React bindings for Keycloak javascript adapter.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tobiasfrei/react-keycloak-fork.git"
+    "url": "git+https://github.com/michael-connolly236/react-keycloak-fork.git"
   },
-  "author": "Tobias Frei <mail@tobiasfrei.ch>",
+  "author": "michael-connolly236",
   "bugs": {
-    "url": "https://github.com/tobiasfrei/react-keycloak-fork/issues"
+    "url": "https://github.com/michael-connolly236/react-keycloak-fork/issues"
   },
-  "homepage": "https://github.com/tobiasfrei/react-keycloak-fork#readme",
+  "homepage": "https://github.com/michael-connolly236/react-keycloak-fork#readme",
   "keywords": [
     "react",
     "keycloak",
@@ -27,10 +27,6 @@
   ],
   "publishConfig": {
     "access": "public"
-  },
-  "funding": {
-    "type": "patreon",
-    "url": "https://www.patreon.com/reactkeycloak"
   },
   "scripts": {
     "clean": "rimraf lib lib-commonjs",
