Rename packages and update registry config
Renamed all @react-keycloak-fork packages to @michael-connolly236 scoped names and updated internal dependencies accordingly. Changed publishConfig to use GitHub npm registry. Removed the .github/FUNDING.yml file.

--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     }
   },
   "dependencies": {
-    "@react-keycloak-fork/core": "file:packages/core",
-    "@react-keycloak-fork/ssr": "file:packages/ssr",
-    "@react-keycloak-fork/web": "file:packages/web"
+    "@michael-connolly236/react-keycloak-fork-core": "file:packages/core",
+    "@michael-connolly236/react-keycloak-fork-ssr": "file:packages/ssr",
+    "@michael-connolly236/react-keycloak-fork-web": "file:packages/web"
   },
   "repository": {
     "type": "git",
