--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-keycloak-fork/web",
+  "name": "@michael-connolly236/react-keycloak-fork-web",
   "version": "4.0.3",
   "license": "MIT",
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=17. React bindings for Keycloak javascript adapter.",
@@ -26,7 +26,7 @@
     "lib-commonjs"
   ],
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "clean": "rimraf lib lib-commonjs",
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
-    "@react-keycloak-fork/core": "file:../core",
+    "@michael-connolly236/react-keycloak-fork-core": "file:../core",
     "hoist-non-react-statics": "^3.3.2"
   },
   "jest": {
