--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-keycloak-fork/core",
+  "name": "@michael-connolly236/react-keycloak-fork-core",
   "version": "4.0.3",
   "license": "MIT",
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=17. React bindings for Keycloak javascript adapter (core)",
@@ -26,7 +26,7 @@
     "lib-commonjs"
   ],
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "clean": "rimraf lib lib-commonjs",
