Remove core, ssr, and web package metadata and lock files
Deleted CHANGELOG.md, MIGRATION.md, and package-lock.json files from packages/core, packages/ssr, and packages/web. Also updated the root package-lock.json to remove references to these packages, likely as part of a package cleanup or deprecation process.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,5 +50,6 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom"
-  }
+  },
+  "gitHead": "0cd23235e898e822306c4f868c3e8dd10b45e41b"
 }
