--- a/package.json
+++ b/package.json
@@ -8,56 +8,59 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "test:coverage": "lerna run test:coverage",
-    "lint": "eslint '**/*.js'",
-    "prettier": "prettier '**/*.js' '**/*.md' '**/*.ts' --write",
+    "lint": "eslint **/*.{js,jsx,ts,tsx} --fix",
+    "prettier": "prettier \"**/*.{js,jsx,ts,tsx,md}\" --write",
     "release": "lerna publish",
     "clean": "lerna run clean && lerna clean && rimraf ./node_modules"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@types/detect-node": "^2.0.0",
-    "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/jest": "^27.5.0",
-    "@types/js-cookie": "^3.0.2",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "@types/react-test-renderer": "^18.0.0",
+    "@babel/core": "^7.29.0",
+    "@babel/eslint-parser": "^7.28.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-react-jsx": "^7.28.6",
+    "@babel/plugin-transform-runtime": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/detect-node": "^2.0.2",
+    "@types/hoist-non-react-statics": "^3.3.7",
+    "@types/jest": "^30.0.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-test-renderer": "^19.1.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "28.1.0",
+    "babel-jest": "30.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^8.15.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": "^7.0.4",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
-    "keycloak-js": "^26.0.0",
-    "lerna": "^6.6.2",
-    "lint-staged": "^12.4.1",
+    "eslint": "^9.39.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "husky": "^9.1.7",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "keycloak-js": "^26.2.3",
+    "lerna": "^9.0.4",
+    "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-test-renderer": "^18.0.0",
-    "rimraf": "^3.0.2",
+    "prettier": "^3.8.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-test-renderer": "^19.2.4",
+    "rimraf": "^6.1.3",
     "timers": "^0.1.1",
-    "ts-jest": "28.0.1",
+    "ts-jest": "29.4.6",
     "tweak-sourcemap-paths": "^0.0.4",
-    "typescript": "^4.6.4"
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
-    "**/*.js": [
+    "**/*.{js,jsx,ts,tsx}": [
       "eslint",
       "prettier --write"
     ]
@@ -68,17 +71,17 @@
     }
   },
   "dependencies": {
-    "@michael-connolly236/react-keycloak-fork-core": "file:packages/core",
-    "@michael-connolly236/react-keycloak-fork-ssr": "file:packages/ssr",
-    "@michael-connolly236/react-keycloak-fork-web": "file:packages/web"
+    "@leoluzh/react-keycloak-fork-core": "file:packages/core",
+    "@leoluzh/react-keycloak-fork-ssr": "file:packages/ssr",
+    "@leoluzh/react-keycloak-fork-web": "file:packages/web"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/michael-connolly236/react-keycloak-fork.git"
+    "url": "git+https://github.com/leoluzh/react-keycloak-fork.git"
   },
-  "author": "michael-connolly236",
+  "author": "leoluzh",
   "bugs": {
-    "url": "https://github.com/michael-connolly236/react-keycloak-fork/issues"
+    "url": "https://github.com/leoluzh/react-keycloak-fork/issues"
   },
-  "homepage": "https://github.com/michael-connolly236/react-keycloak-fork#readme"
+  "homepage": "https://github.com/leoluzh/react-keycloak-fork#readme"
 }
