--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@michael-connolly236/react-keycloak-fork-ssr",
+  "name": "@leoluzh/react-keycloak-fork-ssr",
   "version": "1.1.0",
   "license": "MIT",
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=17. SSR bindings for Keycloak javascript adapter",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/michael-connolly236/react-keycloak-fork.git"
+    "url": "git+https://github.com/leoluzh/react-keycloak-fork.git"
   },
-  "author": "michael-connolly236",
+  "author": "leoluzh",
   "bugs": {
-    "url": "https://github.com/michael-connolly236/react-keycloak-fork/issues"
+    "url": "https://github.com/leoluzh/react-keycloak-fork/issues"
   },
-  "homepage": "https://github.com/michael-connolly236/react-keycloak-fork#readme",
+  "homepage": "https://github.com/leoluzh/react-keycloak-fork#readme",
   "keywords": [
     "react",
     "keycloak",
@@ -54,18 +54,18 @@
     }
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
-    "@michael-connolly236/react-keycloak-fork-core": "file:../core",
+    "@babel/runtime": "^7.28.6",
+    "@leoluzh/react-keycloak-fork-core": "file:../core",
     "detect-node": "^2.1.0",
     "hoist-non-react-statics": "^3.3.2",
-    "js-base64": "^3.7.2",
-    "js-cookie": "^3.0.1"
+    "js-base64": "^3.7.8",
+    "js-cookie": "^3.0.5"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom"
   },
   "devDependencies": {
-    "keycloak-js": "^26.2.0"
+    "keycloak-js": "^26.2.3"
   }
 }
