--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leoluzh/react-keycloak-fork-ssr",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "MIT",
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=19. SSR bindings for Keycloak javascript adapter",
   "repository": {
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.6",
-    "@leoluzh/react-keycloak-fork-core": "file:../core",
+    "@leoluzh/react-keycloak-fork-core": "3.0.1",
     "detect-node": "^2.1.0",
     "hoist-non-react-statics": "^3.3.2",
     "js-base64": "^3.7.8",
@@ -67,5 +67,6 @@
   },
   "devDependencies": {
     "keycloak-js": "^26.2.3"
-  }
+  },
+  "gitHead": "714c0844ff73c867c3a03cdb09ba4b744f98eb8d"
 }
