--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "npmClient": "npm",
   "packages": ["packages/*"],
-  "version": "independent",
+  "version": "7.0.0",
   "command": {
     "publish": {
       "conventionalCommits": true,
