--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,8 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "npmClient": "npm",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "8.0.1",
+  "packages": ["packages/*"],
+  "version": "8.0.2",
   "command": {
     "publish": {
       "conventionalCommits": true,
