--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-keycloak-refork/web",
-  "version": "8.0.1",
+  "version": "8.0.2",
   "license": "MIT",
   "description": "Fork of https://github.com/react-keycloak/react-keycloak.git with updated packages for Keycloak >=19. React bindings for Keycloak javascript adapter.",
   "repository": {
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.6",
-    "@react-keycloak-refork/core": "8.0.1",
+    "@react-keycloak-refork/core": "^8.0.2",
     "hoist-non-react-statics": "^3.3.2"
   },
   "jest": {
